# curso-lse

workspace_lpc845/01_blinky/: main.c
workspace_lpc845/01_blinky/armgcc/: mcux_include.json
workspace_lpc845/01_blinky/armgcc/debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  new_project.elf  output.map
workspace_lpc845/01_blinky/armgcc/debug/.cmake/api/v1/reply/: cache-v2-c9a9aa0a21e29793006d.json  cmakeFiles-v1-81895626cb5dfc633e07.json  codemodel-v2-04e7c15eb52b59ebbcf4.json  index-2025-05-24T00-48-41-0053.json  target-new_project.elf-debug-f8a70dec37f8364ea944.json  toolchains-v1-5a355aa76c26f72b345f.json
workspace_lpc845/02_systick_blinky/: main.c
workspace_lpc845/02_systick_blinky/armgcc/: CMakeLists.txt  config.cmake  flags.cmake  mcux_include.json
workspace_lpc845/02_systick_blinky/armgcc/debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
workspace_lpc845/02_systick_blinky/armgcc/debug/.cmake/api/v1/reply/: cache-v2-1ba2a04c4f3acf67aa02.json  cmakeFiles-v1-c00bbc170eb2560f1d9a.json  codemodel-v2-0f95cc564791c813c5e2.json  index-2025-05-28T14-16-23-0820.json  target-new_project.elf-debug-2c2a485f905257b10fc9.json  toolchains-v1-1c33acbfa5e7a04a9a8d.json
workspace_lpc845/03_light_control/: main.c
workspace_lpc845/03_light_control/armgcc/: CMakeLists.txt  config.cmake  flags.cmake  mcux_include.json
workspace_lpc845/03_light_control/armgcc/debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  new_project.elf  output.map
workspace_lpc845/03_light_control/armgcc/debug/.cmake/api/v1/reply/: cache-v2-3cd30d3a55b00880c25b.json  cmakeFiles-v1-b8715d1e4dec244183df.json  codemodel-v2-a14bc3c700b568164c1a.json  index-2025-06-04T13-46-26-0439.json  target-new_project.elf-debug-70c8d7b1199c43c7d14f.json
